--- a/ili-style/css/style.css
+++ b/ili-style/css/style.css
@@ -3069,8 +3069,8 @@ ul.faq-list li a:hover, ul.faq-list li a.active{
 
 .error-page p {color: #adafb2; font-size: 20px; font-weight: bold;}
 
-/*profile*/
-.profile-pic {
+/*profil*/
+.profil-pic {
     display: block;
     margin-bottom: 10px;
 }
